# GameEngine

./: .gitignore  .gitmodules  CMakeLists.orig.txt  CMakeLists.txt  FGL.make  LICENSE  Makefile  README.md  Test.make  callgrind.out.48582  callgrind.out.51779  imgui.ini  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.2.json  mono_crash.0.3.json  premake5.lua
Editor/: premake5.lua
Editor/projects/: scene.scene
Editor/scenes/: backpack_scene.yaml  demo.yaml  insane_pbr.yaml  recursetest.yaml  scene.yaml  test.yaml  test2.yaml  test3.yaml  test4.yaml  testss
Editor/scripts/: Engine.cs  test.cs  test.lua
Editor/src/: EditorApp.cpp  EditorApp.h  EditorLayer.cpp  EditorLayer.h  FileDialog.cpp  FileDialog.h  FileSelectWindow.cpp  FileSelectWindow.h  MaterialsPanel.cpp  MaterialsPanel.h  SceneHeirarchy.cpp  SceneHeirarchy.h  SceneHierarchy.cpp  SceneHierarchy.h
Editor/src/panels/: DebugPanel.cpp  DebugPanel.h  EnvironmentPanel.cpp  EnvironmentPanel.h  MaterialsPanel.cpp  MaterialsPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneRendererPanel.cpp  SceneRendererPanel.h
Engine/: premake5.lua
Engine/assets/shaders/: Engine2D_Text.glsl  Engine2D_Texture.glsl  Engine3D_Basic.glsl  Engine3D_Instance.glsl  EngineFX_Outline.glsl  EngineFramebuffer.glsl  EngineHDR_Bloom_Pass.glsl  EngineHDR_GaussianBlur.glsl  EngineHDR_Pass.glsl  EngineIBL_BRDF.glsl  EngineIBL_Environment.glsl  EngineIBL_EquirectangularToCubemap.glsl  EngineIBL_Irradiance.glsl  EngineIBL_Prefilter.glsl  EnginePBR_Instanced.glsl  EnginePBR_Static.glsl
Engine/include/: Engine.h
Engine/include/animation/: AnimatedMesh.h  Joint.h
Engine/include/audio/: AudioBuffer.h  AudioController.h  AudioListener.h  AudioSource.h
Engine/include/core/: Application.h  Console.h  Core.h  Cursor.h  EntryPoint.h  Game.h  Gamepad.h  GamepadCodes.h  Input.h  KeyCodes.h  Keyboard.h  Layer.h  Logger.h  Mouse.h  MouseCodes.h  Window.h  WindowEventCallbacks.h
Engine/include/desktop/: ImGuiLayer.h
Engine/include/events/: Event.h  EventDispatcher.h  EventStack.h  GamepadEvent.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Engine/include/io/: FileReader.h  FileWriter.h
Engine/include/math/: Math.h  Rect.h  math.h  rect.h
Engine/include/physics/: Body.h  BoxBody.h  Collider.h  PhysicsWorld.h  PolygonBody.h
Engine/include/platform/: GLFramebuffer.h  GLRendererAPI.h  GLShader.h  GLTexture2D.h
Engine/include/renderer/: Animation.h  Assets.h  BlendMode.h  Buffer.h  EnvironmentMap.h  Framebuffer.h  GraphicsContext.h  IRenderable2D.h  InstancedRenderer.h  Lighting.h  Lights.h  Material.h  Mesh.h  MeshFactory.h  Model.h  ModelLoader.h  Particles.h  PostProcessor.h  Quad.h  QuadBatch.h  RenderCommand.h  (+16 more)
Engine/shaders/: framebuffer.glsl  lighting.glsl  texture.glsl
FGL/: Makefile
FGL/include/: FGL.h  Transformable.h
FGL/src/: Image.cpp
Sandbox/: Sandbox.cpp  Sandbox.h  premake5.lua
Sandbox/assets/: Donut.mtl  Rock1.mtl
Sandbox/src/: Sandbox.cpp  Sandbox.h  SandboxApp.cpp
include/FGL/: FGL.h  Image.h  Transformable.h  Window.h
sandbox/: MultipleWindows.cpp  Sandbox.cpp  Sandbox.h  SandboxApp.h
scripts/: build.sh  clean.sh  compile_scripts.sh  debug.sh  gitcommit.sh  release.sh  run.sh
shaders/: default.frag  default.vert  framebuffer.frag  framebuffer.vert  model.glsl  text.frag  text.glsl  text.vert  texture.frag  texture.glsl  texture.vert
src/: Batch.cpp  Batch.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
src/audio/: SoundBuffer.cpp  SoundListener.cpp  SoundManager.cpp  Source.cpp
src/core/: Application.cpp  Core.cpp  Logger.cpp  Mouse.cpp  Window.cpp
src/events/: Event.cpp  EventDispatcher.cpp
src/io/: FileReader.cpp  FileWriter.cpp
src/renderer/: Batch.cpp  Buffer.cpp  FrameBuffer.cpp  Framebuffer.cpp  Quad.cpp  Quad.h  Renderer.cpp  Shader.cpp  ShaderLibrary.cpp  Sprite.cpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
tests/: General.cpp  Main.cpp
(+366 files in other folders)
